--- a/.github/workflows/build-with-podman.yml
+++ b/.github/workflows/build-with-podman.yml
@@ -38,4 +38,5 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
+          path: arch.sqfs
           name: arch.sqfs
