--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -28,8 +28,11 @@ jobs:
           podman build -t archbuild:latest .
       
       - name: Build artifact
+        env:
+          USER: {{ secrets.USER }}
+          PW: {{ secrets.PW }}
         run: |
-          podman run --privileged --name archbuild archbuild
+          podman run --cap-add SYS_ADMIN --security-opt unmask=/proc/* --security-opt label=disable -v ./cache:/var/cache/pacman/pkg --env USER=$USER --env PW=$PW --name archbuild --replace archbuild
           podman cp archbuild:/arch.sqfs .
 
           podman rm archbuild
