--- a/system/Cargo.toml
+++ b/system/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2021"
 clap = { version = "4.5", features = ["derive"] }
 chrono = { version = "0.4", features = ["serde"] }
 regex = "1.11"
+dotenv = "0.15.0"
+ctrlc = "3.4.5"
