--- a/scripts/config/dconf.conf
+++ b/scripts/config/dconf.conf
@@ -1,3 +1,69 @@
+# System settings
+[org/gnome/desktop/background]
+picture-uri='file:///usr/share/backgrounds/gnome/wallpaper.png'
+picture-uri-dark='file:///usr/share/backgrounds/gnome/wallpaper.png'
+
+[org/gnome/desktop/screensaver]
+picture-uri='file:///usr/share/backgrounds/gnome/wallpaper.png'
+picture-uri-dark='file:///usr/share/backgrounds/gnome/wallpaper.png'
+
+[org/gnome/desktop/interface]
+color-scheme='prefer-dark'
+clock-format='12h'
+clock-show-seconds=false
+clock-show-weekday=false
+
+[org/gnome/desktop/datetime]
+automatic-timezone=false
+
+[org/gnome/desktop/peripherals/touchpad]
+disable-while-typing=true
+two-finger-scrolling-enabled=true
+
+[org/gnome/desktop/sound]
+allow-volume-above-100-percent=true
+
+[org/gnome/login-screen]
+enable-fingerprint-authentication=true
+enable-smartcard-authentication=false
+
+[org/gnome/mutter]
+workspaces-only-on-primary=false
+
+[org/gnome/settings-daemon/plugins/color]
+night-light-enabled=true
+night-light-schedule-automatic=false
+night-light-schedule-from=21.0
+night-light-temperature=uint32 2700
+
+[org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom0]
+binding='<Shift><Control><Alt><Super>l'
+command='firefox https://linkedin.com'
+name='Launch linkedin'
+
+[org/gnome/settings-daemon/plugins/power]
+ambient-enabled=false
+
+[org/gnome/system/location]
+enabled=false
+
+[org/gnome/shell/keybindings]
+show-screenshot-ui=['<Shift><Super>s']
+
+# Extension settings
+[org/gnome/shell/extensions/color-picker]
+color-picker-shortcut=['<Shift><Super>c']
+enable-preview=true
+enable-shortcut=true
+enable-sound=false
+enable-systray=false
+format-menu=false
+
+[org/gnome/shell]
+enabled-extensions=['blur-my-shell@aunetx', 'color-picker@tuberry', 'caffeine@patapon.info']
+favorite-apps=['firefox.desktop', 'org.gnome.Nautilus.desktop', 'org.gnome.TextEditor.desktop', 'code.desktop', 'org.gnome.Console.desktop', 'discord.desktop']
+
+# App settings
 [org/gnome/Weather]
 locations=[<(uint32 2, <('Waterloo', 'CYKF', true, [(0.75863645401796609, -1.402953824577011)], [(0.75863645401796609, -1.4055718184550026)])>)>]
 
@@ -19,44 +85,6 @@ word-size=64
 [org/gnome/calendar]
 active-view='month'
 
-[org/gnome/desktop/background]
-picture-uri='file:///usr/share/backgrounds/gnome/wallpaper.png'
-picture-uri-dark='file:///usr/share/backgrounds/gnome/wallpaper.png'
-
-[org/gnome/desktop/screensaver]
-picture-uri='file:///usr/share/backgrounds/gnome/wallpaper.png'
-picture-uri-dark='file:///usr/share/backgrounds/gnome/wallpaper.png'
-
-[org/gnome/desktop/interface]
-color-scheme='prefer-dark'
-clock-format='24h'
-
-[org/gnome/shell/extensions/color-picker]
-color-picker-shortcut=['<Shift><Super>c']
-enable-preview=true
-enable-shortcut=true
-enable-sound=false
-enable-systray=false
-format-menu=false
-
-[org/gnome/shell]
-enabled-extensions=['blur-my-shell@aunetx', 'color-picker@tuberry', 'caffeine@patapon.info']
-favorite-apps=['firefox.desktop', 'org.gnome.Nautilus.desktop', 'org.gnome.TextEditor.desktop', 'code.desktop', 'org.gnome.Console.desktop', 'discord.desktop']
-
-[org/gnome/desktop/peripherals/touchpad]
-disable-while-typing=true
-two-finger-scrolling-enabled=true
-
-[org/gnome/desktop/sound]
-allow-volume-above-100-percent=true
-
-[org/gnome/login-screen]
-enable-fingerprint-authentication=true
-enable-smartcard-authentication=false
-
-[org/gnome/mutter]
-workspaces-only-on-primary=false
-
 [org/gnome/nautilus/compression]
 default-compression-format='zip'
 
@@ -65,15 +93,22 @@ default-folder-viewer='list-view'
 migrated-gtk-settings=true
 search-filter-time-type='last_modified'
 
-[org/gnome/settings-daemon/plugins/color]
-night-light-enabled=true
-night-light-schedule-automatic=false
-night-light-temperature=uint32 2700
+[org/gtk/gtk4/settings/file-chooser]
+date-format='regular'
+location-mode='path-bar'
+show-hidden=false
+sort-column='name'
+sort-directories-first=false
+sort-order='ascending'
+type-format='category'
+view-type='list'
 
-[org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom0]
-binding='<Shift><Control><Alt><Super>l'
-command='firefox https://linkedin.com'
-name='Launch linkedin'
-
-[org/gnome/system/location]
-enabled=false
+[org/gtk/settings/file-chooser]
+date-format='regular'
+location-mode='path-bar'
+show-hidden=false
+sort-column='name'
+sort-directories-first=false
+sort-order='ascending'
+type-format='category'
+view-type='list'
