Add ssh gnupg to tmpfile

--- a/scripts/config/data-tmpfile.conf
+++ b/scripts/config/data-tmpfile.conf
@@ -35,6 +35,8 @@ d "/home/$USER/Data/AppData/discord" - $USER $USER -
 d "/home/$USER/Data/AppData/firefox" - $USER $USER -
 d "/home/$USER/Data/AppData/obsidian" - $USER $USER -
 d "/home/$USER/Data/AppData/steam" - $USER $USER -
+d "/home/$USER/Data/AppData/ssh" 0700 $USER $USER -
+d "/home/$USER/Data/AppData/gnupg" 0700 $USER $USER -
 d "/home/$USER/Data/AppData/system" 0755 root root -
 d "/home/$USER/Data/AppData/system/networkmanager" 0700 root root -
 d "/home/$USER/Data/AppData/system/fprint" 0700 root root -
@@ -44,3 +46,5 @@ L+ /home/$USER/.config/discord - $USER $USER - /home/$USER/Data/AppData/discord
 L+ /home/$USER/.mozilla - $USER $USER - /home/$USER/Data/AppData/firefox
 L+ /home/$USER/.config/obsidian - $USER $USER - /home/$USER/Data/AppData/obsidian
 L+ /home/$USER/.local/share/.steam - $USER $USER - /home/$USER/Data/AppData/steam
+L+ /home/$USER/.ssh - $USER $USER - /home/$USER/Data/AppData/ssh
+L+ /home/$USER/.gnupg - $USER $USER - /home/$USER/Data/AppData/gnupg
