--- a/scripts/config/nftables.conf
+++ b/scripts/config/nftables.conf
@@ -5,7 +5,7 @@
 flush ruleset
 
 # a common table for both IPv4 and IPv6
-table inet nftables_svc {
+table inet filter {
 
 	# protocols to allow
 	set allowed_protocols {
@@ -22,7 +22,7 @@ table inet nftables_svc {
 	# services to allow
 	set allowed_tcp_dports {
 		type inet_service
-		elements = { }
+		elements = { ssh }
 	}
 
 	# this chain gathers all accept conditions
@@ -31,7 +31,7 @@ table inet nftables_svc {
 
 		meta l4proto @allowed_protocols accept
 		iifname @allowed_interfaces accept
-		tcp dport @allowed_tcp_dports accept
+		# tcp dport @allowed_tcp_dports accept
 	}
 
 	# base-chain for traffic to this host
