--- a/scripts/config/data-tmpfile.conf
+++ b/scripts/config/data-tmpfile.conf
@@ -1,50 +1,56 @@
-# User Data Symlinks
-d /home/$USER/Data/Documents - $USER $USER -
-d /home/$USER/Data/Games - $USER $USER -
-d /home/$USER/Data/Music - $USER $USER -
-d /home/$USER/Data/Scripts - $USER $USER -
-d /home/$USER/Data/Pictures - $USER $USER -
-d /home/$USER/Data/Videos - $USER $USER -
-d /home/$USER/Data/AppData - $USER $USER -
+L+ /home/$USER/Data             - $USER $USER - /var/data
+d /home/$USER/.config           - $USER $USER -
+d /home/$USER/.local            - $USER $USER -
+d /home/$USER/.local/share      - $USER $USER -
 
-L+ /home/$USER/Documents - $USER $USER - /home/$USER/Data/Documents
-L+ /home/$USER/Games - $USER $USER - /home/$USER/Data/Games
-L+ /home/$USER/Music - $USER $USER - /home/$USER/Data/Music
-L+ /home/$USER/Scripts - $USER $USER - /home/$USER/Data/Scripts
-L+ /home/$USER/Pictures - $USER $USER - /home/$USER/Data/Pictures
-L+ /home/$USER/Videos - $USER $USER - /home/$USER/Data/Videos
+# User Data Symlinks
+d /home/$USER/Data/Documents    - $USER $USER -
+d /home/$USER/Data/Games        - $USER $USER -
+d /home/$USER/Data/Music        - $USER $USER -
+d /home/$USER/Data/Scripts      - $USER $USER -
+d /home/$USER/Data/Pictures     - $USER $USER -
+d /home/$USER/Data/Videos       - $USER $USER -
+d /home/$USER/Data/AppData      - $USER $USER -
+
+L+ /home/$USER/Documents        - $USER $USER - /home/$USER/Data/Documents
+L+ /home/$USER/Games            - $USER $USER - /home/$USER/Data/Games
+L+ /home/$USER/Music            - $USER $USER - /home/$USER/Data/Music
+L+ /home/$USER/Scripts          - $USER $USER - /home/$USER/Data/Scripts
+L+ /home/$USER/Pictures         - $USER $USER - /home/$USER/Data/Pictures
+L+ /home/$USER/Videos           - $USER $USER - /home/$USER/Data/Videos
 
 # Game Save Symlinks
-d "/home/$USER/Data/Games/Stardew Valley" - $USER $USER -
-d "/home/$USER/Data/Games/Oxygen Not Included" - $USER $USER -
-d "/home/$USER/Data/Games/Hollow Knight" - $USER $USER -
-d "/home/$USER/Data/Games/Terraria" - $USER $USER -
-d "/home/$USER/Data/Games/Factorio" - $USER $USER -
-d "/home/$USER/Data/Games/Cuphead" - $USER $USER -
+d "/home/$USER/Data/Games/Stardew Valley"       - $USER $USER -
+d "/home/$USER/Data/Games/Oxygen Not Included"  - $USER $USER -
+d "/home/$USER/Data/Games/Hollow Knight"        - $USER $USER -
+d "/home/$USER/Data/Games/Terraria"             - $USER $USER -
+d "/home/$USER/Data/Games/Factorio"             - $USER $USER -
+d "/home/$USER/Data/Games/Cuphead"              - $USER $USER -
 
-L+ /home/$USER/.config/StardewValley/Saves - $USER $USER - "/home/$USER/Games/Stardew Valley"
-L+ /home/$USER/.config/unity3d/Klei/OxygenNotIncluded - $USER $USER - "/home/$USER/Games/Oxygen Not Included"
-L+ "/home/$USER/.config/unity3d/Team Cherry/Hollow Knight" - $USER $USER - "/home/$USER/Games/Hollow Knight"
-L+ /home/$USER/.local/share/Terraria - $USER $USER - /home/$USER/Games/Terraria
-L+ /home/$USER/.factorio - $USER $USER - /home/$USER/Games/Factorio
-L+ /home/$USER/.local/share/Steam/steamapps/common/Cuphead/Saves - $USER $USER - /home/$USER/Games/Cuphead
+L+ /home/$USER/.config/StardewValley/Saves      - $USER $USER - "/home/$USER/Games/Stardew Valley"
+L+ /home/$USER/.local/share/Terraria            - $USER $USER - /home/$USER/Games/Terraria
+L+ /home/$USER/.factorio                        - $USER $USER - /home/$USER/Games/Factorio
+
+L+ /home/$USER/.config/unity3d/Klei/OxygenNotIncluded               - $USER $USER - "/home/$USER/Games/Oxygen Not Included"
+L+ "/home/$USER/.config/unity3d/Team Cherry/Hollow Knight"          - $USER $USER - "/home/$USER/Games/Hollow Knight"
+L+ /home/$USER/.local/share/Steam/steamapps/common/Cuphead/Saves    - $USER $USER - /home/$USER/Games/Cuphead
 
 # AppData Symlinks
-d "/home/$USER/Data/AppData/vscode" - $USER $USER -
-d "/home/$USER/Data/AppData/discord" - $USER $USER -
-d "/home/$USER/Data/AppData/firefox" - $USER $USER -
-d "/home/$USER/Data/AppData/obsidian" - $USER $USER -
-d "/home/$USER/Data/AppData/steam" - $USER $USER -
-d "/home/$USER/Data/AppData/ssh" 0700 $USER $USER -
-d "/home/$USER/Data/AppData/gnupg" 0700 $USER $USER -
-d "/home/$USER/Data/AppData/system" 0755 root root -
-d "/home/$USER/Data/AppData/system/networkmanager" 0700 root root -
-d "/home/$USER/Data/AppData/system/fprint" 0700 root root -
+d "/home/$USER/Data/AppData/vscode"                 -    $USER $USER -
+d "/home/$USER/Data/AppData/discord"                -    $USER $USER -
+d "/home/$USER/Data/AppData/firefox"                -    $USER $USER -
+d "/home/$USER/Data/AppData/obsidian"               -    $USER $USER -
+d "/home/$USER/Data/AppData/steam"                  -    $USER $USER -
+d "/home/$USER/Data/AppData/ssh"                    0700 $USER $USER -
+d "/home/$USER/Data/AppData/gnupg"                  0700 $USER $USER -
+d "/home/$USER/Data/AppData/system"                 0755 root root -
+d "/home/$USER/Data/AppData/system/networkmanager"  0700 root root -
+d "/home/$USER/Data/AppData/system/fprint"          0700 root root -
 
-L+ /home/$USER/.config/Code - $USER $USER - /home/$USER/Data/AppData/vscode
-L+ /home/$USER/.config/discord - $USER $USER - /home/$USER/Data/AppData/discord
-L+ /home/$USER/.mozilla - $USER $USER - /home/$USER/Data/AppData/firefox
-L+ /home/$USER/.config/obsidian - $USER $USER - /home/$USER/Data/AppData/obsidian
-L+ /home/$USER/.local/share/.steam - $USER $USER - /home/$USER/Data/AppData/steam
-L+ /home/$USER/.ssh - $USER $USER - /home/$USER/Data/AppData/ssh
-L+ /home/$USER/.gnupg - $USER $USER - /home/$USER/Data/AppData/gnupg
+L+ /home/$USER/.config/Code         - $USER $USER - /home/$USER/Data/AppData/vscode
+L+ /home/$USER/.config/discord      - $USER $USER - /home/$USER/Data/AppData/discord
+L+ /home/$USER/.mozilla             - $USER $USER - /home/$USER/Data/AppData/firefox
+L+ /home/$USER/.config/obsidian     - $USER $USER - /home/$USER/Data/AppData/obsidian
+L+ /home/$USER/.local/share/.steam  - $USER $USER - /home/$USER/Data/AppData/steam
+L+ /home/$USER/.ssh                 - $USER $USER - /home/$USER/Data/AppData/ssh
+L+ /home/$USER/.gnupg               - $USER $USER - /home/$USER/Data/AppData/gnupg
