--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -5,7 +5,7 @@ permissions:
   contents: write
 jobs:
   build:
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
 
     steps:
       # Check out the repository
@@ -20,15 +20,16 @@ jobs:
           sudo docker builder prune -a
           df -h
       
-      - name: Set up Podman
+      - name: Install Nix
         run: |
-          sudo apt-get update
-          sudo apt-get -y install software-properties-common
-          source /etc/os-release
-          sudo add-apt-repository -y "deb https://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable/xUbuntu_${VERSION_ID}/ /"
-          wget -nv https://download.opensuse.org/repositories/devel:kubic:libcontainers:stable/xUbuntu_${VERSION_ID}/Release.key -O- | sudo apt-key add -
-          sudo apt-get update
-          sudo apt-get -y install podman
+          curl -L https://nixos.org/nix/install | sh
+          source $HOME/.nix-profile/etc/profile.d/nix.sh
+
+      - name: Install Podman via Nix
+        run: |
+          podman --version
+          nix-env -iA nixpkgs.podman
+          podman --version
       
       - name: Build Rust project
         run: |
