--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -27,10 +27,9 @@ jobs:
 
       - name: Install Podman via Nix
         run: |
-          podman --version
-          . $HOME/.nix-profile/etc/profile.d/nix.sh
-          nix-env -iA nixpkgs.podman
-          podman --version
+          sudo mkdir -p /etc/nix
+          sudo sh -c "echo 'sandbox = false' >> /etc/nix/nix.conf"
+          sudo nix-env -iA nixpkgs.podman
           sudo podman --version
       
       - name: Build Rust project
