Is the alias hack not working?

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -33,6 +33,7 @@ jobs:
           podman --version
           alias podman=$(which podman)
           sudo podman --version
+          sudo $(which podman) --version
       
       - name: Build Rust project
         run: |
